# StockStatistic

./: .dockerignore  .env.v31.example  .gitignore  DESIGN.md  DESIGN_ARCHITECTURE.md  DESIGN_ARCHITECTURE_CN.md  DESIGN_CN.md  DESIGN_PROTOCOL.md  DESIGN_PROTOCOL_CN.md  DESIGN_V2_CN.md  DESIGN_V3_CN.md  LICENSE  README.md  README_CN.md  docker-compose.yml  pyproject.toml  requirements-v31.txt  requirements.txt
V31design/designV31/: DESIGN_ARCH_COMPUTE_V31.md  DESIGN_ARCH_DISPATCHER_V31.md  DESIGN_ARCH_FINANCE_V31.md  DESIGN_ARCH_FOUNDATION_V31.md  DESIGN_ARCH_INVOCATION_V31.md  DESIGN_ARCH_STORAGE_V31.md  DESIGN_ARCH_V31.md  DESIGN_GENERALIZE.md  DESIGN_PROT_V31.md
V31design/realizeV31/: ADR.md  FINAL_IMPLEMENTATION_REPORT.md  P1.md  P1_REPORT.md  P2.md  P2_REPORT.md  P3.md  P3_REPORT.md  P4.md  P4_REPORT.md  P5.md  P5_REPORT.md  P6.md  P6_REPORT.md  P7.md  P7_REPORT.md  P8.md  P8_REPORT.md  P9.md  P9_REPORT.md  README.md
backend/: serve.sh  start.bat
backend/stockstat_backend/: app.py  config.py
deploy/: Dockerfile
docs/: DEPLOYMENT.md  DEPLOYMENT_CN.md  OPERATIONS.md  OPERATIONS_CN.md  USAGE.md  USAGE_CN.md  verify_usage.py
docs/backtest/: BT0.md  BT0_CN.md  BT10_CN.md  BT1_CN.md  BT2_CN.md  BT3.md  BT4.md  BT4_CN.md  BT5.md  BT6.md  BT6_CN.md  BT7.md  BT8_CN.md  BT9_CN.md  BTV0_CN.md  BTV1.md  BTV1_CN.md  BTV2.md  BTV3.md  BTV3_CN.md  BT_VIZ_ONLINE_REPORT_CN.md
docs/v3/: P1_CN.md  P3_CN.md  P5_CN.md  P7_CN.md  SUMMARY_CN.md  SUMMARY_FULL_CN.md
frontend/: pyproject.toml
frontend/stockstat/: __init__.py  client.py
frontend/stockstat/_api/client/: __init__.py
frontend/stockstat/_core/: _compat.py  errors.py  logging.py
frontend/stockstat/_core/cache/: __init__.py
frontend/stockstat/_core/codec/: __init__.py
frontend/stockstat/_core/compute/: __init__.py  data_dispatch.py  handlers.py  remote.py
frontend/stockstat/_core/contracts/: __init__.py  cache.py  codec.py  renderer.py  task.py  transport.py
frontend/stockstat/_core/plugin/: __init__.py
frontend/stockstat/_core/protocol/: __init__.py  envelope.py  messages.py
frontend/stockstat/_core/storage/: __init__.py
frontend/stockstat/_core/transport/: __init__.py  http.py  redis.py  shared_memory.py
frontend/stockstat/_domain/backtest/: __init__.py
frontend/stockstat/_domain/models/: __init__.py
frontend/stockstat/_domain/scheduler/: __init__.py
frontend/stockstat/_domain/sources/: __init__.py
frontend/stockstat/app/: __init__.py  cli.py
frontend/stockstat/backtest/: __init__.py  benchmark.py  broker.py  chart_factory.py  chart_registry.py  chart_spec.py  context.py  cost_model.py  data_feed.py  engine.py  execution_model.py  fee_sweep.py  fill_model.py  intrabar.py  matplotlib_charts.py  orders.py  plot_adapter.py  portfolio.py  result.py  sizing.py  strategy.py
frontend/stockstat/compute/: engine.py  registry.py
frontend/stockstat/data_access/: ohlcv.py
frontend/stockstat/dsl/: evaluator.py  parser.py
frontend/stockstat/indicators/: __init__.py  nonlinear.py  statistics.py  trend.py
frontend/stockstat/plot/: base.py  matplotlib_backend.py
frontend/tests/: conftest.py  test_backtest_iface.py  test_backtest_intrabar.py  test_backtest_multitf.py  test_backtest_optimize.py  test_backtest_p1.py  test_backtest_portfolio.py  test_backtest_strategies.py  test_backtest_viz_dashboard.py  test_backtest_viz_iface.py  test_backtest_viz_mpl.py  test_backtest_viz_online.py  test_frontend.py  test_integration.py  test_matplotlib_charts.py  test_v2_api.py  test_v2_core.py  test_v2_viz.py  test_v3_compat.py  test_v3_compute_backend.py  test_v3_e2e.py  test_v3_preempt.py  test_v3_protocol.py  test_v3_shm_stream.py
legacy/: DESIGN_CN.md  README.md  verify_usage.py
legacy/backend/: Dockerfile  pyproject.toml  serve.bat  start.sh
legacy/backend/stockstat_backend/: app.py  config.py
legacy/backend/stockstat_backend/adapters/: synthetic.py  yfinance.py
legacy/backend/stockstat_backend/api/: adapters.py  routes.py
legacy/backend/stockstat_backend/dispatcher/: __init__.py  dispatch.py  plugin.py  prefetch.py
legacy/backend/stockstat_backend/normalizer/: normalizer.py
legacy/backend/stockstat_backend/plugins/admin/: __init__.py  utils.py  web.py
legacy/backend/stockstat_backend/storage/: cache.py  repository.py
legacy/backend/tests/: test_backend.py
reports/: ADMIN_PLUGIN_DESIGN_CN.md  COMPUTE_OFFLOAD_PLAN_V2_CN.md  TEST_REPORT.md  WEB_ADMIN_DESIGN_CN.md
scripts/: install_v31.ps1  run_v31_tests.ps1
services/dispatcher/: pyproject.toml
services/dispatcher/stockstat_dispatcher/: __init__.py  app.py  cli.py  planners.py  service.py  store.py
services/storage/: pyproject.toml
services/storage/stockstat_storage/: __init__.py  app.py  artifacts.py  cli.py  ingestion.py  repository.py  snapshots.py
services/worker/: pyproject.toml
services/worker/stockstat_worker/: __init__.py  agent.py  cache.py  cli.py  execution.py  http.py
tests/: test_connection.py  test_perf.py
worker/: pyproject.toml
worker/stockstat_compute/: cli.py  executor.py  register.py  worker.py
(+150 files in other folders)
