[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stockstat"
version = "0.1.0"
description = "StockStat computation frontend library"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "httpx>=0.27",
    "pyarrow>=15.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
matplotlib = ["matplotlib>=3.8"]
plotly = ["plotly>=5.20"]
plot = ["stockstat[matplotlib]"]
dev = ["pytest>=7.0"]
dsl = ["lark>=1.1"]

[tool.setuptools.packages.find]
include = ["stockstat*"]
