[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stockstat"
version = "0.1.0"
description = "StockStat computation frontend library"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "httpx>=0.27",
    "pyarrow>=15.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
matplotlib = ["matplotlib>=3.8"]
plotly = ["plotly>=5.20"]
plot = ["stockstat[matplotlib]"]
dev = ["pytest>=7.0"]
dsl = ["lark>=1.1"]
backtest = ["stockstat"]
optimize = ["optuna>=3.5"]
backtest_viz = ["stockstat[backtest]", "matplotlib>=3.8"]
backtest_full = ["stockstat[backtest]", "stockstat[optimize]",
                 "stockstat[matplotlib]", "matplotlib>=3.8"]

[tool.setuptools.packages.find]
include = ["stockstat*"]
