[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stockstat-compute"
version = "3.0.0"
description = "StockStat V3 Compute Worker — distributed task execution"
requires-python = ">=3.10"
dependencies = [
    "stockstat>=3.0.0",
    "cloudpickle>=3.0",
    "psutil>=5.9",
    "pyarrow>=15.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
msgpack = ["msgpack>=1.0"]
gpu = ["pynvml>=11.0"]
full = ["stockstat-compute[redis,msgpack]"]

[project.scripts]
stockstat-compute = "stockstat_compute.cli:main"

[tool.setuptools.packages.find]
include = ["stockstat_compute*"]
