[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "stockstat-dispatcher"
version = "3.1.0"
description = "StockStat V3.1 dispatcher service"
requires-python = ">=3.11,<3.13"
dependencies = [
    "stockstat-contracts==3.1.0",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "psycopg[binary]>=3.2,<4",
    "psycopg-pool>=3.2,<4",
]

[project.scripts]
stockstat-dispatcher = "stockstat_dispatcher.cli:main"

[tool.setuptools.packages.find]
include = ["stockstat_dispatcher*"]
