[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "stockstat-storage"
version = "3.1.0"
description = "StockStat V3.1 storage service"
requires-python = ">=3.11,<3.13"
dependencies = [
    "stockstat-contracts==3.1.0",
    "pandas>=2.2,<3",
    "pyarrow>=18,<26",
    "fastapi>=0.115,<1",
    "psycopg[binary]>=3.2,<4",
    "psycopg-pool>=3.2,<4",
    "boto3>=1.35,<2",
]

[project.scripts]
stockstat-storage = "stockstat_storage.cli:main"

[tool.setuptools.packages.find]
include = ["stockstat_storage*"]
