[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "stockstat-worker"
version = "3.1.0"
description = "StockStat V3.1 compute worker"
requires-python = ">=3.11,<3.13"
dependencies = [
    "stockstat-contracts==3.1.0",
    "stockstat-kernel==3.1.0",
    "stockstat-storage==3.1.0",
    "stockstat==3.1.0",
    "psutil>=6,<8",
    "pyarrow>=18,<26",
]

[project.scripts]
stockstat-worker = "stockstat_worker.cli:main"

[tool.setuptools.packages.find]
include = ["stockstat_worker*"]
